Modified the index.html, blog.html, script.js and blog.js files to ensure that the 'enter your idea' and 'back' buttons work properly and that the user inputs from index.html can be seen in the local storage and visualized in blog.html. The 'blog entries' counter was removed in the index.html, and the light/dark mode button was added in the blog.js file. Styling was also improved through modifications in both html files and both css files.

--- a/assets/css/blogStyle.css
+++ b/assets/css/blogStyle.css
@@ -237,6 +237,10 @@
     margin: 20px;
   }
   
-  
+  .Post{
+    border-width: 2px;
+    border-color: black;
+    border-style: solid;
+  }
   
   
